--- a/app.ipynb
+++ b/app.ipynb
@@ -503,6 +503,495 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 \n",
+      "1 IS_ALPHA\n",
+      "2 IS_ASCII\n",
+      "3 IS_DIGIT\n",
+      "4 IS_LOWER\n",
+      "5 IS_PUNCT\n",
+      "6 IS_SPACE\n",
+      "7 IS_TITLE\n",
+      "8 IS_UPPER\n",
+      "9 LIKE_URL\n",
+      "10 LIKE_NUM\n",
+      "11 LIKE_EMAIL\n",
+      "12 IS_STOP\n",
+      "13 IS_OOV_DEPRECATED\n",
+      "14 IS_BRACKET\n",
+      "15 IS_QUOTE\n",
+      "16 IS_LEFT_PUNCT\n",
+      "17 IS_RIGHT_PUNCT\n",
+      "18 IS_CURRENCY\n",
+      "19 FLAG19\n",
+      "20 FLAG20\n",
+      "21 FLAG21\n",
+      "22 FLAG22\n",
+      "23 FLAG23\n",
+      "24 FLAG24\n",
+      "25 FLAG25\n",
+      "26 FLAG26\n",
+      "27 FLAG27\n",
+      "28 FLAG28\n",
+      "29 FLAG29\n",
+      "30 FLAG30\n",
+      "31 FLAG31\n",
+      "32 FLAG32\n",
+      "33 FLAG33\n",
+      "34 FLAG34\n",
+      "35 FLAG35\n",
+      "36 FLAG36\n",
+      "37 FLAG37\n",
+      "38 FLAG38\n",
+      "39 FLAG39\n",
+      "40 FLAG40\n",
+      "41 FLAG41\n",
+      "42 FLAG42\n",
+      "43 FLAG43\n",
+      "44 FLAG44\n",
+      "45 FLAG45\n",
+      "46 FLAG46\n",
+      "47 FLAG47\n",
+      "48 FLAG48\n",
+      "49 FLAG49\n",
+      "50 FLAG50\n",
+      "51 FLAG51\n",
+      "52 FLAG52\n",
+      "53 FLAG53\n",
+      "54 FLAG54\n",
+      "55 FLAG55\n",
+      "56 FLAG56\n",
+      "57 FLAG57\n",
+      "58 FLAG58\n",
+      "59 FLAG59\n",
+      "60 FLAG60\n",
+      "61 FLAG61\n",
+      "62 FLAG62\n",
+      "63 FLAG63\n",
+      "64 ID\n",
+      "65 ORTH\n",
+      "66 LOWER\n",
+      "67 NORM\n",
+      "68 SHAPE\n",
+      "69 PREFIX\n",
+      "70 SUFFIX\n",
+      "71 LENGTH\n",
+      "72 CLUSTER\n",
+      "73 LEMMA\n",
+      "74 POS\n",
+      "75 TAG\n",
+      "76 DEP\n",
+      "77 ENT_IOB\n",
+      "78 ENT_TYPE\n",
+      "79 HEAD\n",
+      "80 SENT_START\n",
+      "81 SPACY\n",
+      "82 PROB\n",
+      "83 LANG\n",
+      "84 ADJ\n",
+      "85 ADP\n",
+      "86 ADV\n",
+      "87 AUX\n",
+      "88 CONJ\n",
+      "89 CCONJ\n",
+      "90 DET\n",
+      "91 INTJ\n",
+      "92 NOUN\n",
+      "93 NUM\n",
+      "94 PART\n",
+      "95 PRON\n",
+      "96 PROPN\n",
+      "97 PUNCT\n",
+      "98 SCONJ\n",
+      "99 SYM\n",
+      "100 VERB\n",
+      "101 X\n",
+      "102 EOL\n",
+      "103 SPACE\n",
+      "104 DEPRECATED001\n",
+      "105 DEPRECATED002\n",
+      "106 DEPRECATED003\n",
+      "107 DEPRECATED004\n",
+      "108 DEPRECATED005\n",
+      "109 DEPRECATED006\n",
+      "110 DEPRECATED007\n",
+      "111 DEPRECATED008\n",
+      "112 DEPRECATED009\n",
+      "113 DEPRECATED010\n",
+      "114 DEPRECATED011\n",
+      "115 DEPRECATED012\n",
+      "116 DEPRECATED013\n",
+      "117 DEPRECATED014\n",
+      "118 DEPRECATED015\n",
+      "119 DEPRECATED016\n",
+      "120 DEPRECATED017\n",
+      "121 DEPRECATED018\n",
+      "122 DEPRECATED019\n",
+      "123 DEPRECATED020\n",
+      "124 DEPRECATED021\n",
+      "125 DEPRECATED022\n",
+      "126 DEPRECATED023\n",
+      "127 DEPRECATED024\n",
+      "128 DEPRECATED025\n",
+      "129 DEPRECATED026\n",
+      "130 DEPRECATED027\n",
+      "131 DEPRECATED028\n",
+      "132 DEPRECATED029\n",
+      "133 DEPRECATED030\n",
+      "134 DEPRECATED031\n",
+      "135 DEPRECATED032\n",
+      "136 DEPRECATED033\n",
+      "137 DEPRECATED034\n",
+      "138 DEPRECATED035\n",
+      "139 DEPRECATED036\n",
+      "140 DEPRECATED037\n",
+      "141 DEPRECATED038\n",
+      "142 DEPRECATED039\n",
+      "143 DEPRECATED040\n",
+      "144 DEPRECATED041\n",
+      "145 DEPRECATED042\n",
+      "146 DEPRECATED043\n",
+      "147 DEPRECATED044\n",
+      "148 DEPRECATED045\n",
+      "149 DEPRECATED046\n",
+      "150 DEPRECATED047\n",
+      "151 DEPRECATED048\n",
+      "152 DEPRECATED049\n",
+      "153 DEPRECATED050\n",
+      "154 DEPRECATED051\n",
+      "155 DEPRECATED052\n",
+      "156 DEPRECATED053\n",
+      "157 DEPRECATED054\n",
+      "158 DEPRECATED055\n",
+      "159 DEPRECATED056\n",
+      "160 DEPRECATED057\n",
+      "161 DEPRECATED058\n",
+      "162 DEPRECATED059\n",
+      "163 DEPRECATED060\n",
+      "164 DEPRECATED061\n",
+      "165 DEPRECATED062\n",
+      "166 DEPRECATED063\n",
+      "167 DEPRECATED064\n",
+      "168 DEPRECATED065\n",
+      "169 DEPRECATED066\n",
+      "170 DEPRECATED067\n",
+      "171 DEPRECATED068\n",
+      "172 DEPRECATED069\n",
+      "173 DEPRECATED070\n",
+      "174 DEPRECATED071\n",
+      "175 DEPRECATED072\n",
+      "176 DEPRECATED073\n",
+      "177 DEPRECATED074\n",
+      "178 DEPRECATED075\n",
+      "179 DEPRECATED076\n",
+      "180 DEPRECATED077\n",
+      "181 DEPRECATED078\n",
+      "182 DEPRECATED079\n",
+      "183 DEPRECATED080\n",
+      "184 DEPRECATED081\n",
+      "185 DEPRECATED082\n",
+      "186 DEPRECATED083\n",
+      "187 DEPRECATED084\n",
+      "188 DEPRECATED085\n",
+      "189 DEPRECATED086\n",
+      "190 DEPRECATED087\n",
+      "191 DEPRECATED088\n",
+      "192 DEPRECATED089\n",
+      "193 DEPRECATED090\n",
+      "194 DEPRECATED091\n",
+      "195 DEPRECATED092\n",
+      "196 DEPRECATED093\n",
+      "197 DEPRECATED094\n",
+      "198 DEPRECATED095\n",
+      "199 DEPRECATED096\n",
+      "200 DEPRECATED097\n",
+      "201 DEPRECATED098\n",
+      "202 DEPRECATED099\n",
+      "203 DEPRECATED100\n",
+      "204 DEPRECATED101\n",
+      "205 DEPRECATED102\n",
+      "206 DEPRECATED103\n",
+      "207 DEPRECATED104\n",
+      "208 DEPRECATED105\n",
+      "209 DEPRECATED106\n",
+      "210 DEPRECATED107\n",
+      "211 DEPRECATED108\n",
+      "212 DEPRECATED109\n",
+      "213 DEPRECATED110\n",
+      "214 DEPRECATED111\n",
+      "215 DEPRECATED112\n",
+      "216 DEPRECATED113\n",
+      "217 DEPRECATED114\n",
+      "218 DEPRECATED115\n",
+      "219 DEPRECATED116\n",
+      "220 DEPRECATED117\n",
+      "221 DEPRECATED118\n",
+      "222 DEPRECATED119\n",
+      "223 DEPRECATED120\n",
+      "224 DEPRECATED121\n",
+      "225 DEPRECATED122\n",
+      "226 DEPRECATED123\n",
+      "227 DEPRECATED124\n",
+      "228 DEPRECATED125\n",
+      "229 DEPRECATED126\n",
+      "230 DEPRECATED127\n",
+      "231 DEPRECATED128\n",
+      "232 DEPRECATED129\n",
+      "233 DEPRECATED130\n",
+      "234 DEPRECATED131\n",
+      "235 DEPRECATED132\n",
+      "236 DEPRECATED133\n",
+      "237 DEPRECATED134\n",
+      "238 DEPRECATED135\n",
+      "239 DEPRECATED136\n",
+      "240 DEPRECATED137\n",
+      "241 DEPRECATED138\n",
+      "242 DEPRECATED139\n",
+      "243 DEPRECATED140\n",
+      "244 DEPRECATED141\n",
+      "245 DEPRECATED142\n",
+      "246 DEPRECATED143\n",
+      "247 DEPRECATED144\n",
+      "248 DEPRECATED145\n",
+      "249 DEPRECATED146\n",
+      "250 DEPRECATED147\n",
+      "251 DEPRECATED148\n",
+      "252 DEPRECATED149\n",
+      "253 DEPRECATED150\n",
+      "254 DEPRECATED151\n",
+      "255 DEPRECATED152\n",
+      "256 DEPRECATED153\n",
+      "257 DEPRECATED154\n",
+      "258 DEPRECATED155\n",
+      "259 DEPRECATED156\n",
+      "260 DEPRECATED157\n",
+      "261 DEPRECATED158\n",
+      "262 DEPRECATED159\n",
+      "263 DEPRECATED160\n",
+      "264 DEPRECATED161\n",
+      "265 DEPRECATED162\n",
+      "266 DEPRECATED163\n",
+      "267 DEPRECATED164\n",
+      "268 DEPRECATED165\n",
+      "269 DEPRECATED166\n",
+      "270 DEPRECATED167\n",
+      "271 DEPRECATED168\n",
+      "272 DEPRECATED169\n",
+      "273 DEPRECATED170\n",
+      "274 DEPRECATED171\n",
+      "275 DEPRECATED172\n",
+      "276 DEPRECATED173\n",
+      "277 DEPRECATED174\n",
+      "278 DEPRECATED175\n",
+      "279 DEPRECATED176\n",
+      "280 DEPRECATED177\n",
+      "281 DEPRECATED178\n",
+      "282 DEPRECATED179\n",
+      "283 DEPRECATED180\n",
+      "284 DEPRECATED181\n",
+      "285 DEPRECATED182\n",
+      "286 DEPRECATED183\n",
+      "287 DEPRECATED184\n",
+      "288 DEPRECATED185\n",
+      "289 DEPRECATED186\n",
+      "290 DEPRECATED187\n",
+      "291 DEPRECATED188\n",
+      "292 DEPRECATED189\n",
+      "293 DEPRECATED190\n",
+      "294 DEPRECATED191\n",
+      "295 DEPRECATED192\n",
+      "296 DEPRECATED193\n",
+      "297 DEPRECATED194\n",
+      "298 DEPRECATED195\n",
+      "299 DEPRECATED196\n",
+      "300 DEPRECATED197\n",
+      "301 DEPRECATED198\n",
+      "302 DEPRECATED199\n",
+      "303 DEPRECATED200\n",
+      "304 DEPRECATED201\n",
+      "305 DEPRECATED202\n",
+      "306 DEPRECATED203\n",
+      "307 DEPRECATED204\n",
+      "308 DEPRECATED205\n",
+      "309 DEPRECATED206\n",
+      "310 DEPRECATED207\n",
+      "311 DEPRECATED208\n",
+      "312 DEPRECATED209\n",
+      "313 DEPRECATED210\n",
+      "314 DEPRECATED211\n",
+      "315 DEPRECATED212\n",
+      "316 DEPRECATED213\n",
+      "317 DEPRECATED214\n",
+      "318 DEPRECATED215\n",
+      "319 DEPRECATED216\n",
+      "320 DEPRECATED217\n",
+      "321 DEPRECATED218\n",
+      "322 DEPRECATED219\n",
+      "323 DEPRECATED220\n",
+      "324 DEPRECATED221\n",
+      "325 DEPRECATED222\n",
+      "326 DEPRECATED223\n",
+      "327 DEPRECATED224\n",
+      "328 DEPRECATED225\n",
+      "329 DEPRECATED226\n",
+      "330 DEPRECATED227\n",
+      "331 DEPRECATED228\n",
+      "332 DEPRECATED229\n",
+      "333 DEPRECATED230\n",
+      "334 DEPRECATED231\n",
+      "335 DEPRECATED232\n",
+      "336 DEPRECATED233\n",
+      "337 DEPRECATED234\n",
+      "338 DEPRECATED235\n",
+      "339 DEPRECATED236\n",
+      "340 DEPRECATED237\n",
+      "341 DEPRECATED238\n",
+      "342 DEPRECATED239\n",
+      "343 DEPRECATED240\n",
+      "344 DEPRECATED241\n",
+      "345 DEPRECATED242\n",
+      "346 DEPRECATED243\n",
+      "347 DEPRECATED244\n",
+      "348 DEPRECATED245\n",
+      "349 DEPRECATED246\n",
+      "350 DEPRECATED247\n",
+      "351 DEPRECATED248\n",
+      "352 DEPRECATED249\n",
+      "353 DEPRECATED250\n",
+      "354 DEPRECATED251\n",
+      "355 DEPRECATED252\n",
+      "356 DEPRECATED253\n",
+      "357 DEPRECATED254\n",
+      "358 DEPRECATED255\n",
+      "359 DEPRECATED256\n",
+      "360 DEPRECATED257\n",
+      "361 DEPRECATED258\n",
+      "362 DEPRECATED259\n",
+      "363 DEPRECATED260\n",
+      "364 DEPRECATED261\n",
+      "365 DEPRECATED262\n",
+      "366 DEPRECATED263\n",
+      "367 DEPRECATED264\n",
+      "368 DEPRECATED265\n",
+      "369 DEPRECATED266\n",
+      "370 DEPRECATED267\n",
+      "371 DEPRECATED268\n",
+      "372 DEPRECATED269\n",
+      "373 DEPRECATED270\n",
+      "374 DEPRECATED271\n",
+      "375 DEPRECATED272\n",
+      "376 DEPRECATED273\n",
+      "377 DEPRECATED274\n",
+      "378 DEPRECATED275\n",
+      "379 DEPRECATED276\n",
+      "380 PERSON\n",
+      "381 NORP\n",
+      "382 FACILITY\n",
+      "383 ORG\n",
+      "384 GPE\n",
+      "385 LOC\n",
+      "386 PRODUCT\n",
+      "387 EVENT\n",
+      "388 WORK_OF_ART\n",
+      "389 LANGUAGE\n",
+      "390 LAW\n",
+      "391 DATE\n",
+      "392 TIME\n",
+      "393 PERCENT\n",
+      "394 MONEY\n",
+      "395 QUANTITY\n",
+      "396 ORDINAL\n",
+      "397 CARDINAL\n",
+      "398 acomp\n",
+      "399 advcl\n",
+      "400 advmod\n",
+      "401 agent\n",
+      "402 amod\n",
+      "403 appos\n",
+      "404 attr\n",
+      "405 aux\n",
+      "406 auxpass\n",
+      "407 cc\n",
+      "408 ccomp\n",
+      "409 complm\n",
+      "410 conj\n",
+      "411 cop\n",
+      "412 csubj\n",
+      "413 csubjpass\n",
+      "414 dep\n",
+      "415 det\n",
+      "416 dobj\n",
+      "417 expl\n",
+      "418 hmod\n",
+      "419 hyph\n",
+      "420 infmod\n",
+      "421 intj\n",
+      "422 iobj\n",
+      "423 mark\n",
+      "424 meta\n",
+      "425 neg\n",
+      "426 nmod\n",
+      "427 nn\n",
+      "428 npadvmod\n",
+      "429 nsubj\n",
+      "430 nsubjpass\n",
+      "431 num\n",
+      "432 number\n",
+      "433 oprd\n",
+      "434 obj\n",
+      "435 obl\n",
+      "436 parataxis\n",
+      "437 partmod\n",
+      "438 pcomp\n",
+      "439 pobj\n",
+      "440 poss\n",
+      "441 possessive\n",
+      "442 preconj\n",
+      "443 prep\n",
+      "444 prt\n",
+      "445 punct\n",
+      "446 quantmod\n",
+      "447 relcl\n",
+      "448 rcmod\n",
+      "449 root\n",
+      "450 xcomp\n",
+      "451 acl\n",
+      "452 ENT_KB_ID\n",
+      "453 MORPH\n",
+      "454 ENT_ID\n",
+      "455 IDX\n",
+      "456 _\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"[E018] Can't retrieve string for hash '457'. This usually refers to an issue with the `Vocab` or `StringStore`.\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-36fbd39cdd56>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnlp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnlp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\krishna\\anaconda3\\lib\\site-packages\\spacy\\vocab.pyx\u001b[0m in \u001b[0;36mspacy.vocab.Vocab.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\krishna\\anaconda3\\lib\\site-packages\\spacy\\lexeme.pyx\u001b[0m in \u001b[0;36mspacy.lexeme.Lexeme.__init__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\krishna\\anaconda3\\lib\\site-packages\\spacy\\vocab.pyx\u001b[0m in \u001b[0;36mspacy.vocab.Vocab.get_by_orth\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\krishna\\anaconda3\\lib\\site-packages\\spacy\\strings.pyx\u001b[0m in \u001b[0;36mspacy.strings.StringStore.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"[E018] Can't retrieve string for hash '457'. This usually refers to an issue with the `Vocab` or `StringStore`.\""
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(nlp.vocab)):\n",
+    "    print(i, nlp.vocab[i].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
